--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ body {
   .image-container {
     position: relative;
     display: inline-block;
-    width: 20%;
+    max-width: 20%;
+    min-width: 300px;
   }
   .image-container img {
     display: block;
@@ -65,4 +66,13 @@ body {
     text-align: center;
     font-size: 1em;
     box-sizing:border-box;
+  }
+
+  .hero-image {
+    float: right;
+    width: 300px;
+    height: auto;
+    margin: 3rem 0 1rem 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
