--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
     float: right;
     width: 300px;
     height: auto;
-    margin: 3rem 0 1rem 1rem;
+    margin: 0 0 1rem 1rem;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
