--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 /* Hero Image Floating */
 .hero-image {
   float: right;
-  width: 250px;
+  max-width: 250px;
   height: auto;
   margin-left: 20px;
   margin-top: 2rem;
@@ -38,10 +38,20 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Hero Details */
-.hero-details {
+.hero-image-print {
+  float: right;
+  max-height: 150px;
+  width: auto;
+  margin-left: 20px;
+  margin-top: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+#characterSheet{
   overflow: hidden;
-  /* Ensure wrapping around the floated image */
+  width: 100%;
+  font-size: 10px;
 }
 
 .hero-details h1 {
@@ -330,12 +340,12 @@ body {
 .character-sheet table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
+  /*margin: 20px 0;*/
 }
 
 .character-sheet table th, .character-sheet table td {
   border: 1px solid #ccc;
-  padding: 8px;
+  padding: 0 8px;
   text-align: left;
 }
 
